@@ -1,3 +1,6 @@
+/*
+ *    Copyright 2019 West Coast Informatics, LLC
+ */
 package org.ihtsdo.otf.mapping.test.selenium;
 
 import static org.junit.Assert.assertTrue;
@@ -58,11 +61,8 @@ public class GeneralDegenerateUseTest {
             "Invalid browser specified in config file.  Valid options are: firefox, chrome, ie");
     }
 
-    webDriver
-        .manage()
-        .timeouts()
-        .implicitlyWait(new Long(config.getProperty("selenium.timeout")),
-            TimeUnit.SECONDS);
+    webDriver.manage().timeouts().implicitlyWait(
+        Long.valueOf(config.getProperty("selenium.timeout")), TimeUnit.SECONDS);
   }
 
   /**
@@ -77,7 +77,6 @@ public class GeneralDegenerateUseTest {
     }
   }
 
-
   /**
    * User invalid login test.
    */
@@ -85,14 +84,15 @@ public class GeneralDegenerateUseTest {
   @Test
   public void testDegenerateUseGuiGeneral001() {
 
-    Logger.getLogger(GeneralDegenerateUseTest.class).info("Testing invalid user login...");
+    Logger.getLogger(GeneralDegenerateUseTest.class)
+        .info("Testing invalid user login...");
 
     // Open website
     webDriver.get(config.getProperty("selenium.url"));
 
     // fill in the user name from created valid user
-    webDriver.findElement(By.id("userField")).sendKeys(
-        config.getProperty("selenium.user.invalid.name"));
+    webDriver.findElement(By.id("userField"))
+        .sendKeys(config.getProperty("selenium.user.invalid.name"));
 
     // fill in the password from config file
     webDriver.findElement(By.id("passwordField")).sendKeys("invalid_password");
@@ -101,18 +101,19 @@ public class GeneralDegenerateUseTest {
     webDriver.findElement(By.id("userLoginButton")).click();
 
     // Find the header content and test once injection is complete
-    (new WebDriverWait(webDriver, new Long(
-        config.getProperty("selenium.timeout")) / 1000))
-        .until(new ExpectedCondition<Boolean>() {
-          @Override
-          public Boolean apply(WebDriver d) {
-            return webDriver.findElement(By.id("globalError")).getText()
-                .length() > 0;
-          }
-        });
+    (new WebDriverWait(webDriver,
+        Long.valueOf(config.getProperty("selenium.timeout")) / 1000))
+            .until(new ExpectedCondition<Boolean>() {
+              @Override
+              public Boolean apply(WebDriver d) {
+                return webDriver.findElement(By.id("globalError")).getText()
+                    .length() > 0;
+              }
+            });
 
     // verify that string matches pattern Text (Text)
-    assertTrue(webDriver.findElement(By.id("globalError")).getText().length() > 0);
+    assertTrue(
+        webDriver.findElement(By.id("globalError")).getText().length() > 0);
 
     Logger.getLogger(GeneralDegenerateUseTest.class).info("  PASS");
   }
